# potato

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/tests/: imgui.ini  script.lua  script2.lua
src/: main.cpp
src/core/: application.cpp  application.h  engine.h  engine_context.cpp  engine_context.h  executable.cpp  executable.h  ref_scope.h
src/core/assets_manager/: asset.cpp  asset.h  assets_manager.cpp  assets_manager.h
src/core/assets_manager/assets/: lua_script_asset.cpp  lua_script_asset.h  texture_asset.cpp  texture_asset.h
src/core/components/: camera.h  sprite_renderer.h
src/core/ecs/: component.h  entity.cpp  entity.h  entity_id.h  registry.cpp  registry.h  sprite_renderer.h  system.cpp  system.h
src/core/ecs/components/: all_components.h  box_collider_2d.cpp  box_collider_2d.h  camera.h  children.h  lua_script.cpp  lua_script.h  name.h  parent.h  sprite_renderer.cpp  sprite_renderer.h  transform.cpp  transform.h
src/core/ecs/systems/: camera.cpp  camera.h  example.cpp  example.h  lua_script_system.cpp  lua_script_system.h  sprite_renderer.cpp  sprite_renderer.h
src/core/filesystem/: filesystem.h
src/core/input/: input_state.cpp  input_state.h
src/core/logging/: debug.cpp  debug.h  debug_system.cpp  debug_system.h
src/core/physics/: constants.h  physics_material.h
src/core/rendering/: buffer_layout.h  framebuffer.cpp  framebuffer.h  index_buffer.cpp  index_buffer.h  render_api.h  renderer.cpp  renderer.h  renderer2d.cpp  renderer2d.h  renderer_api.cpp  renderer_api.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h  texture.cpp  texture.h  texture2d.cpp  texture2d.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
src/core/rendering/opengl/: opengl_framebuffer.cpp  opengl_framebuffer.h  opengl_index_buffer.cpp  opengl_index_buffer.h  opengl_renderer.cpp  opengl_renderer.h  opengl_renderer_api.cpp  opengl_renderer_api.h  opengl_shader.cpp  opengl_shader.h  opengl_shader_program.cpp  opengl_shader_program.h  opengl_texture.h  opengl_texture2d.h  opengl_vertex_array.cpp  opengl_vertex_array.h  opengl_vertex_buffer.h
src/core/scripting/: lua_script.h  scripting_module.cpp  scripting_module.h
src/core/systems/: camera.cpp  camera.h  example.cpp  example.h  sprite_renderer.cpp  sprite_renderer.h
src/core/windowing/: window.cpp  window.h
src/core/windowing/glfw/: glfw_window_backend.cpp  glfw_window_backend.h
src/core/world/: scene.h
src/editor/: console.cpp  console.h  context.cpp  context.h  editor.cpp  editor.h  editor_application.cpp  editor_application.h  editor_context.cpp  editor_context.h  game_player.cpp  game_player.h  game_viewport.h  hierarchy.cpp  hierarchy.h  inspector.cpp  inspector.h  panel.cpp  panel.h  project_window.cpp  project_window.h  style.cpp  style.h  theme.cpp  theme.h  viewport.cpp  viewport.h
src/editor/commands/: command.h  command_manager.cpp  command_manager.h
src/platform/: api.cpp  api.h
src/platform/linux/: linux.cpp  linux.h
src/platform/windows/: win32.cpp  win32.h
